--- a/ForwardChaining/src/com/arnasrad/fbchaining/view/main-view-wo-menu.fxml
+++ b/ForwardChaining/src/com/arnasrad/fbchaining/view/main-view-wo-menu.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            prefHeight="680.0" prefWidth="800.0" fx:controller="com.arnasrad.binarysearchtree.MainController">
+            prefHeight="680.0" prefWidth="800.0" fx:controller="com.arnasrad.fbchaining.MainController">
     <center>
         <SplitPane dividerPositions="0.3">
 
