--- a/ForwardChaining/src/com/arnasrad/fbchaining/view/main-view.fxml
+++ b/ForwardChaining/src/com/arnasrad/fbchaining/view/main-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            prefHeight="680.0" prefWidth="800.0" fx:controller="com.arnasrad.binarysearchtree.MainController">
+            prefHeight="680.0" prefWidth="800.0" fx:controller="com.arnasrad.fbchaining.MainController">
     <center>
         <SplitPane dividerPositions="0.3">
 
@@ -53,12 +53,18 @@
                             </font>
                         </Label>
                         <Label fx:id="traversalSpeedLbl"/>
-                        <Label text="Graph vertex count" underline="true" VBox.vgrow="ALWAYS">
+                        <Label text="Facts count" underline="true" VBox.vgrow="ALWAYS">
                             <font>
                                 <Font size="13.0"/>
                             </font>
                         </Label>
                         <Label fx:id="factsCountLbl"/>
+                        <Label text="Rules count" underline="true" VBox.vgrow="ALWAYS">
+                            <font>
+                                <Font size="13.0"/>
+                            </font>
+                        </Label>
+                        <Label fx:id="rulesCountLbl"/>
                         <Label text="Current vertex " underline="true">
                             <font>
                                 <Font size="13.0"/>
@@ -72,7 +78,7 @@
                     <BorderPane GridPane.rowIndex="2">
                         <center>
                             <Slider fx:id="traversalSpeedSlider"
-                                    min="50" max="1000"
+                                    min="50" max="2500"
                                     value="250"
                                     majorTickUnit="50"
                                     snapToTicks="true"
@@ -153,6 +159,37 @@
         </SplitPane>
     </center>
     <top>
-
+        <MenuBar BorderPane.alignment="CENTER">
+            <Menu mnemonicParsing="false" text="File">
+                <MenuItem mnemonicParsing="false" onAction="#menuOpenClicked" text="Open"/>
+                <MenuItem mnemonicParsing="false" onAction="#menuRestartClicked" text="Restart"/>
+                <MenuItem mnemonicParsing="false" onAction="#menuCloseClicked" text="Close"/>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+                <Menu mnemonicParsing="false" text="Traverse">
+                    <fx:define>
+                        <ToggleGroup fx:id="traverseGroup"/>
+                    </fx:define>
+                    <RadioMenuItem fx:id="menuForward" mnemonicParsing="false" selected="true"
+                                   text="FORWARD_CHAINING" toggleGroup="$traverseGroup"/>
+                    <RadioMenuItem fx:id="menuBackward" mnemonicParsing="false"
+                                   text="BACKWARD_CHAINING" toggleGroup="$traverseGroup"/>
+                </Menu>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Show">
+                <Menu mnemonicParsing="false" text="Output">
+                    <fx:define>
+                        <ToggleGroup fx:id="outputGroup"/>
+                    </fx:define>
+                    <RadioMenuItem fx:id="menuVerificationGraph" mnemonicParsing="false"
+                                   text="Verification Graph" toggleGroup="$outputGroup"/>
+                    <RadioMenuItem fx:id="menuSemanticGraph" mnemonicParsing="false" selected="true"
+                                   text="Semantic Graph" toggleGroup="$outputGroup"/>
+                </Menu>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+                <MenuItem mnemonicParsing="false" onAction="#menuAboutClicked" text="About"/>
+            </Menu>
+        </MenuBar>
     </top>
 </BorderPane>
